--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.16",
+    "concurrently": "^7.4.0",
     "tailwindcss": "^3.1.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
